# raytracer

./: CMakeLists.txt  README.org
renders/: image.ppm
src/: camera.h  color.h  config.h  hittable.h  hittable_list.h  interval.h  linear_algebra.h  main.cpp  material.h  ray.h  sphere.h
